<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".UI.AssessmentDetail">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/assessmentNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/detailLabelStyle"
            android:text="@string/assessment_name" />
        <EditText
            android:id="@+id/editAssessmentName"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="@id/assessmentNameTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"
            style="@style/itemDataStyle"
            android:hint="@string/enter_name"
            android:autofillHints="Enter Name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/assessmentStartDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/detailLabelStyle"
            android:text="@string/assessment_start_date" />
        <TextView
            android:id="@+id/editAssessmentStartDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="@id/assessmentStartDateTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            style="@style/itemDataStyle"
            android:hint="@string/start_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/assessmentEndDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/detailLabelStyle"
            android:text="@string/assessment_end_date" />
        <TextView
            android:id="@+id/editAssessmentEndDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="@id/assessmentEndDateTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            style="@style/itemDataStyle"
            android:hint="@string/end_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/assessmentTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        style="@style/detailLabelStyle"
        android:text="@string/assessment_type" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/objectiveAssessmentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/itemDataStyle"
            android:text="@string/objective" />

        <RadioButton
            android:id="@+id/performanceAssessmentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/itemDataStyle"
            android:text="@string/performance" />
    </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/alertCheckBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/alertCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            style="@style/detailLabelStyle"
            android:text="Set Assessment Alerts" />
        </LinearLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alertCheckBoxLayout"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:text="Save Assessment Details"
            android:focusable="true"
            android:clickable="true"
            android:onClick="onSave"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>