<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".UI.TermDetail" >

    <ScrollView
        android:id="@+id/termInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/termNameText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/detailLabelStyle"
                android:text="@string/term_name" />
            <EditText
                android:id="@+id/editTermName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/itemDataStyle"
                android:inputType="text"
                android:autofillHints=""
                android:hint="@string/enter_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <TextView
                android:id="@+id/termStartDateText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp"
                style="@style/detailLabelStyle"
                android:text="@string/term_start_date" />
            <TextView
                android:id="@+id/editTermStartDate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                style="@style/itemDataStyle"
                android:hint="@string/start_date" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" >
            <TextView
                android:id="@+id/termEndDateText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/detailLabelStyle"
                android:text="@string/term_end_date" />
            <TextView
                android:id="@+id/editTermEndDate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp"
                style="@style/itemDataStyle"
                android:hint="@string/end_date"
                android:focusable="true"
                android:clickable="true" />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onSave"
            android:text="@string/save" />

        <LinearLayout
            android:id="@+id/header_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/courseInfoContainer"
            android:background="@color/teal_200"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                style="@style/headerTextStyle"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:text="Name"
                app:layout_constraintLeft_toLeftOf="parent" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/textView1"
                style="@style/headerTextStyle"
                android:text="Start Date" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/textView2"
                android:paddingStart="-20dp"
                style="@style/headerTextStyle"
                android:text="End Date" />
        </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/courseListRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header_title"
                    android:background="@color/teal_700"
                    android:scrollbars="vertical"
                    android:padding="5dp" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:contentDescription="@string/add_new_course"
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/termInfoContainer"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="addNewCourse"
        app:srcCompat="@drawable/ic_baseline_add_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>



